// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Component should render correctly with custom props 1`] = `
<ProgressBox>
  <Bar
    color="primary"
    posX={10}
    theme={
      Object {
        "palette": Object {
          "primary": Object {
            "color": "rgb(0, 108, 174)",
            "text": "rgba(255,255,255,0.87)",
          },
        },
      }
    }
    width={20}
  />
</ProgressBox>
`;

exports[`ProgressBar Component should render correctly with default props 1`] = `
<ProgressBox>
  <Bar
    color="primary"
    posX={0}
    theme={
      Object {
        "palette": Object {
          "primary": Object {
            "color": "rgb(0, 108, 174)",
            "text": "rgba(255,255,255,0.87)",
          },
        },
      }
    }
    width={0}
  />
</ProgressBox>
`;
